// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DimensionContext lifecyle render context 1`] = `
<View>
  <Text>
    Width 
    200
  </Text>
  <Text>
    Height 
    200
  </Text>
</View>
`;

exports[`DimensionContext lifecyle should re-render the component on updates 1`] = `
<View>
  <Text>
    Width 
    4000
  </Text>
  <Text>
    Height 
    2000
  </Text>
</View>
`;
